Ensure quotes layout centered and prevent horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 
 html, body {
   width: 100vw;
+  max-width: 100vw;
   min-height: 100dvh;
   margin: 0;
   padding: 0;
